syntax = "proto3";
package mmp.im.common.protocol;

import "google/protobuf/any.proto"; // 继承 使用Any必须要导入Any.proto

option java_outer_classname = "MessageTypeA";

message Message {

    int64 seq = 1;
    string from = 2;
    string to = 3;

    // uint32 type = 4;
    Type type = 4;

    // bytes data = 5;
    google.protobuf.Any data = 5;
    // 仅用于转发
    repeated string notifyIdList = 6;

    enum Type {
        // 好友单聊
        FRIEND_MESSAGE = 0;
        // 群聊
        GROUP_MESSAGE = 1;
        // 注册
        SERVER_REGISTER = 2;
        // 用户登陆
        CLIENT_LOGIN = 3;
        // 用户注销
        CLIENT_LOGOUT = 4;
        // 状态通知
        CLIENT_STATUS = 5;
        //
        BROADCAST_FRIEND_MESSAGE = 6;
        BROADCAST_GROUP_MESSAGE = 7;
        BROADCAST_CLIENT_STATUS = 8;
    }

    //
    message FriendMessage {
        string data = 1;
    }

    message GroupMessage {
        string data = 1;

    }

    //
    message ServerRegister {
        string id = 1;
        string token = 2;
        string data = 3;
    }

    //
    message ClientLogin {
        string id = 1;
        string token = 2;
    }
    message ClientLogout {
        string id = 1;
        string token = 2;
    }

    //
    message ClientStatus {
        string id = 1;
        string serverId = 2;
        bool status = 3;
    }


}
